fix: added google website verification

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.gif" type="image/gif" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Calendar</title>
+    <meta name="google-site-verification" content="n_MTsfV_miIC8gtbqe0PIJNhrvckkwFHHDXbnm4ljn4" />
   </head>
   <body>
     <noscript>
